# Auto-RemoteControl

./: .gitignore  CMakeLists.txt  README.md  start_agent.bat  start_both.bat  start_viewer.bat  stop_all.bat
.claude/: settings.local.json
Agent/: AgentMain.cpp  AgentSession.cpp  AgentSession.h  CMakeLists.txt
Agent/Capture/: CaptureManager.cpp  CaptureManager.h  DxgiScreenCapture.cpp  DxgiScreenCapture.h  WasapiAudioCapture.cpp  WasapiAudioCapture.h
Agent/Encoder/: EncoderManager.cpp  EncoderManager.h  MfAudioEncoder.cpp  MfAudioEncoder.h  MfVideoEncoder.cpp  MfVideoEncoder.h
Agent/Input/: InputInjectorImpl.cpp  InputInjectorImpl.h
Agent/Network/: AgentNetworkImpl.cpp  AgentNetworkImpl.h  ControlChannel.cpp  ControlChannel.h  DataChannel.cpp  DataChannel.h
Common/: CMakeLists.txt  Common.h
Common/Protocol/: Constants.h  ControlMessage.cpp  ControlMessage.h  FrameHeader.cpp  FrameHeader.h
Common/Security/: AesGcm.cpp  AesGcm.h  Authenticator.cpp  Authenticator.h  DiffieHellman.cpp  DiffieHellman.h  SecureChannel.cpp  SecureChannel.h
Common/Utils/: Config.cpp  Config.h  DebugScreenshot.cpp  DebugScreenshot.h  Logger.cpp  Logger.h  RingBuffer.h  ThreadSafeQueue.h  Timer.cpp  Timer.h  WorkerThreadPool.h
Viewer/: CMakeLists.txt  ViewerMain.cpp  ViewerSession.cpp  ViewerSession.h  ViewerWindow.cpp  ViewerWindow.h
Viewer/Decoder/: MfAudioDecoder.cpp  MfAudioDecoder.h  MfVideoDecoder.cpp  MfVideoDecoder.h
Viewer/Input/: RawInputCapture.cpp  RawInputCapture.h
Viewer/Network/: ViewerControlChannel.cpp  ViewerControlChannel.h  ViewerDataChannel.cpp  ViewerDataChannel.h  ViewerNetworkImpl.cpp  ViewerNetworkImpl.h
Viewer/Render/: D2dOverlay.cpp  D2dOverlay.h  D3d11Renderer.cpp  D3d11Renderer.h  WasapiAudioRenderer.cpp  WasapiAudioRenderer.h
